Update: Post Method, Swal, Buttons for Logs

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -56,3 +56,29 @@ input::placeholder, textarea::placeholder {
     background-color: tomato;
     cursor: pointer;
 }
+
+.button {
+    border: none;
+    padding: 5px;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+}
+
+.logout{
+    background-color: tomato;
+}
+
+.login{
+    background-color: teal;
+}
+
+.register{
+    background-color: slateblue;
+}
+
+.buttons, .logout {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
