--- a/frontend/src/components/register.css
+++ b/frontend/src/components/register.css
@@ -17,7 +17,7 @@
 }
 
 .logo{
-    color: slateblue;
+    color: rgb(8, 80, 66);
     display: flex;
     align-items: center;
     font-weight: 700;
@@ -28,7 +28,7 @@
     padding: 5px;
     border-radius: 5px;
     color: white;
-    background-color: slateblue;
+    background-color: rgb(8, 80, 66);
     cursor: pointer;
 }
 
