API URL constant

--- a/frontend/src/components/Direction.css
+++ b/frontend/src/components/Direction.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: 20px;
     width: 300px;
-    left: 20px;
+    left: 5vh;
     height: fit-content;
     background-color: #202020d3;
     z-index: 1;
