--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,3 +1,7 @@
+/*
+    Este archivo contiene los estilos de la aplicación. 
+    Se ha utilizado el mismo estilo que en la sección de login de usuarios.
+*/
 .card {
     width: 250px;
     height: 250px;
