--- a/frontend/src/components/Direction.css
+++ b/frontend/src/components/Direction.css
@@ -1,3 +1,8 @@
+/* 
+    En este archivo se encuentran los estilos de la sección de dirección de la aplicación Chronicle.
+    Se ha utilizado el mismo estilo que en la sección de login y registro de usuarios.
+*/
+
 .container{
     position: absolute;
     top: 20px;
