--- a/frontend/src/components/login.css
+++ b/frontend/src/components/login.css
@@ -1,3 +1,8 @@
+/*
+    En este archivo se encuentran los estilos de la sección de login de la aplicación Chronicle.
+    Se ha utilizado el mismo estilo que en la sección de registro de usuarios.
+*/
+
 .loginContainer{
     width:300px;
     height: 200px;
