--- a/frontend/src/components/register.css
+++ b/frontend/src/components/register.css
@@ -1,3 +1,7 @@
+/*
+    Este archivo contiene los estilos de la vista de registro de usuarios de la aplicación Chronicle.
+    Se ha utilizado el mismo estilo que en la sección de login de usuarios.
+*/
 .registerContainer{
     width:300px;
     height: 300px;
